--- a/angular/drink-party-frontend/src/app/views/main/main.component.html
+++ b/angular/drink-party-frontend/src/app/views/main/main.component.html
@@ -18,8 +18,8 @@
         </div>
         <div class="p-3 mt-1">
           <ng-container [ngSwitch]="currentMode">
-          <app-join-form *ngSwitchCase="screenModes.Join" ></app-join-form>
-          <app-create-form *ngSwitchCase="screenModes.Create" (formResult)="onCreate($event)"></app-create-form>
+          <app-join-form *ngSwitchCase="screenModes.Join" [state]="formState" (stateChange)="onStateChange($event)"></app-join-form>
+          <app-create-form *ngSwitchCase="screenModes.Create"  [state]="formState" (stateChange)="onStateChange($event)" (formResult)="onCreate($event)"></app-create-form>
         </ng-container>
         </div>
       </div>
